--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.15.5",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
     "rxjs": "~6.5.4",
